Add green/red to theme vars.

--- a/packages/client/public/static/css/themes.css
+++ b/packages/client/public/static/css/themes.css
@@ -7,4 +7,6 @@
     --theme-primary-shadow: #15171a;
     --theme-primary-lighter: #808387;
     --theme-primary-text: #c0b8b8;
+    --theme-primary-green: #469e46;
+    --theme-primary-red: #a83a3a;
 }
