Add triggers for last_modified updates.

--- a/packages/client/public/static/css/themes.css
+++ b/packages/client/public/static/css/themes.css
@@ -5,6 +5,7 @@
     --theme-primary: #2d3034;
     --theme-primary-accent: #377dbe;
     --theme-primary-shadow: #15171a;
+    --theme-primary-shadow-rgb: 21, 23, 26;
     --theme-primary-lighter: #808387;
     --theme-primary-text: #c0b8b8;
     --theme-primary-green: #469e46;
