--- a/packages/client/public/static/css/global.css
+++ b/packages/client/public/static/css/global.css
@@ -37,3 +37,8 @@ a:hover {
     color: var(--theme-primary-accent);
     font-weight: bold;
 }
+
+.strong {
+    font-weight: bold;
+    font-size: 14pt;
+}
