Update client code to use current web stack

--- a/packages/client/assets/css/themes.css
+++ b/packages/client/assets/css/themes.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
 :root {
-    --font-primary: 'Roboto', serif;
+    --font-primary: "Roboto", serif;
     --theme-primary: #2d3034;
     --theme-primary-accent: #377dbe;
     --theme-primary-shadow: #15171a;
