--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,5 +1,22 @@
-/* Global styles should go here. */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+@font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    src: url("../assets/fonts/roboto.woff2") format("woff2");
+}
+
+@font-face {
+    font-family: "Roboto-Bold";
+    font-style: bold;
+    font-weight: 400;
+    src: url("../assets/fonts/roboto-bold.woff2") format("woff2");
+}
+
+@font-face {
+    font-family: "Roboto-Italic";
+    font-style: italic;
+    src: url("../assets/fonts/roboto-italic.woff2") format("woff2");
+}
 
 :root {
     --font-primary: "Roboto", serif;
