--- a/client/src/app.css
+++ b/client/src/app.css
@@ -1,25 +1,19 @@
 @font-face {
     font-family: "Roboto";
-    font-style: normal;
     font-weight: 400;
+    font-style: normal;
     src: url("../assets/fonts/roboto.woff2") format("woff2");
 }
 
 @font-face {
-    font-family: "Roboto-Bold";
-    font-style: bold;
+    font-family: "Roboto Light";
     font-weight: 400;
-    src: url("../assets/fonts/roboto-bold.woff2") format("woff2");
-}
-
-@font-face {
-    font-family: "Roboto-Italic";
-    font-style: italic;
-    src: url("../assets/fonts/roboto-italic.woff2") format("woff2");
+    font-style: normal;
+    src: url("../assets/fonts/roboto-light.woff2") format("woff2");
 }
 
 :root {
-    --font-primary: "Roboto", serif;
+    --font-primary: "Roboto Light", serif;
     --theme-primary: #2d3034;
     --theme-primary-accent: #377dbe;
     --theme-primary-shadow: #15171a;
